# mcp-pyproject-pkg

./: README.md  pyproject.toml
src/mcp_pyproject_pkg/: __init__.py  server.py
