[project]
name = "mcp-pyproject-pkg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jake@prefect.io", email = "jake@prefect.io" }
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.11.3",
    "pandas>=2.3.1",
]

[project.scripts]
mcp-pyproject-pkg = "mcp_pyproject_pkg:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
